抽屉布局组件，初步实现功能；

--- a/packages/cbc/layout/page-layout/page-layout.component.html
+++ b/packages/cbc/layout/page-layout/page-layout.component.html
@@ -9,6 +9,6 @@
   <ng-content select="co-page-main"></ng-content>
   <!--    </div>-->
   <!--    <div class="co-page-layout__content__side">-->
-  <ng-content select="co-page-side"></ng-content>
+  <ng-content select="co-page-side,co-page-side-drawer"></ng-content>
   <!--    </div>-->
 </div>
