--- a/src/app/routes/dev/cbc/layout/page-layout-demo/page-layout-demo.component.html
+++ b/src/app/routes/dev/cbc/layout/page-layout-demo/page-layout-demo.component.html
@@ -8,7 +8,7 @@
         <a>Application List</a>
       </nz-breadcrumb-item>
       <nz-breadcrumb-item>
-        An Application
+        An Application, id: {{id}}
       </nz-breadcrumb-item>
     </nz-breadcrumb>
     <div style="padding: 24px;width: 100%;height: 100%;background-color: #ffffff;">
