--- a/packages/cbc/layout/page-layout/style/index.less
+++ b/packages/cbc/layout/page-layout/style/index.less
@@ -61,8 +61,6 @@
 }
 
 @{page-side-prefix} {
-  margin-left: 16px;
-
   &-resize-handle {
     position: absolute;
     user-select: none;
@@ -88,6 +86,70 @@
       height: 100%;
       width: 1px;
       background: #AAA;
+    }
+  }
+
+  &-drawer {
+    display: none;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    z-index: 1;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 0;
+    animation: max-width ease 0.5s;
+
+    &__show {
+      display: block;
+    }
+
+    &-content {
+      display: flex;
+      flex-direction: column;
+      flex-wrap: nowrap;
+      width: 100%;
+      height: 100%;
+      position: relative;
+      overflow: auto;
+    }
+
+    &-header {
+      position: relative;
+      padding: 16px 24px;
+      border-bottom: 1px solid #f0f0f0;
+      border-radius: 2px 2px 0 0;
+    }
+
+    &-title {
+      margin: 0;
+      color: rgba(0, 0, 0, .85);
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 22px;
+    }
+
+    &-close {
+      position: absolute;
+      top: 0;
+      right: 0;
+      z-index: 10;
+      display: block;
+      padding: 20px;
+      color: rgba(0,0,0,.45);
+      font-weight: 700;
+      font-size: 16px;
+      font-style: normal;
+      line-height: 1;
+      text-align: center;
+      text-transform: none;
+      text-decoration: none;
+      background: 0 0;
+      border: 0;
+      outline: 0;
+      cursor: pointer;
+      transition: color .3s;
+      text-rendering: auto;
     }
   }
 }
