--- a/src/app/routes/dev/cbc/layout/page-layout-demo/right-side-demo/right-side-demo.component.html
+++ b/src/app/routes/dev/cbc/layout/page-layout-demo/right-side-demo/right-side-demo.component.html
@@ -1,6 +1,6 @@
 <div class="bg-wrapper">
   <co-page-layout>
-    <co-page-main [coMaxWidth]="'1200px'">
+    <co-page-main [coMaxWidth]="1200">
       <co-page-layout>
         <co-toolbar>
           <co-toolbar-item>
@@ -20,9 +20,9 @@
           </co-toolbar-item>
           <co-toolbar-item alignRight>
             <nz-input-group style="width: 320px;" [nzSuffix]="suffixIconSearch">
-              <input type="text" nz-input placeholder="搜索" />
+              <input type="text" nz-input placeholder="搜索" #input />
               <ng-template #suffixIconSearch>
-                <i nz-icon nzType="search"></i>
+                <i nz-icon nzType="search" style="cursor: pointer;" (click)="open(input.value)"></i>
               </ng-template>
             </nz-input-group>
           </co-toolbar-item>
@@ -60,13 +60,20 @@
           </co-search-area-extra>
         </co-search-area-layout>
         <co-page-main>
-          <div style="display: flex;justify-content: center;align-items: center;background: #9e9e9e;height: 100%;width:100%;color: white;">主内容区域</div>
+          <div style="display: flex;justify-content: center;align-items: center;background: #9e9e9e;height: 100%;width:100%;color: white;">
+            <nz-button-group>
+              <button nz-button nzType="secondary" (click)="open(1)"><i nz-icon nzType="edit" nzTheme="outline"></i>打开1</button>
+              <button nz-button nzType="secondary" (click)="open(2)"><i nz-icon nzType="edit" nzTheme="outline"></i>打开2</button>
+              <button nz-button nzType="secondary" (click)="open(3)"><i nz-icon nzType="edit" nzTheme="outline"></i>打开3</button>
+              <button nz-button nzType="secondary" (click)="close()"><i nz-icon nzType="edit" nzTheme="outline"></i>关闭</button>
+            </nz-button-group>
+          </div>
         </co-page-main>
         <co-page-side>
           <div style="display: flex;justify-content: center;align-items: center;background: #8f8f88;height: 100%;width:100%;color: white;">侧栏区域</div>
         </co-page-side>
       </co-page-layout>
     </co-page-main>
-    <co-page-side style="background: #8f8f88;" coWidthResizable></co-page-side>
+    <co-page-side-drawer style="background: #8f8f88;" coWidthResizable></co-page-side-drawer>
   </co-page-layout>
 </div>
