抽屉布局组件完善；

--- a/src/app/routes/dev/cbc/layout/page-layout-demo/right-side-demo/right-side-demo.component.html
+++ b/src/app/routes/dev/cbc/layout/page-layout-demo/right-side-demo/right-side-demo.component.html
@@ -74,6 +74,6 @@
         </co-page-side>
       </co-page-layout>
     </co-page-main>
-    <co-page-side-drawer style="background: #8f8f88;" coWidthResizable></co-page-side-drawer>
+    <co-page-side-drawer coWidthResizable></co-page-side-drawer>
   </co-page-layout>
 </div>
