--- a/packages/cbc/layout/page-layout/style/index.less
+++ b/packages/cbc/layout/page-layout/style/index.less
@@ -104,7 +104,7 @@
       width: 100%;
       height: 100%;
       position: relative;
-      overflow: auto;
+      overflow: hidden;
       padding: 12px;
     }
 
@@ -113,6 +113,10 @@
       padding: 16px 24px;
       border-bottom: 1px solid #f0f0f0;
       border-radius: 2px 2px 0 0;
+    }
+
+    &-body {
+      overflow: hidden;
     }
 
     &-title {
