更新抽屉布局组件；

--- a/packages/cbc/layout/page-layout/drawer/page-side-drawer.component.html
+++ b/packages/cbc/layout/page-layout/drawer/page-side-drawer.component.html
@@ -4,7 +4,7 @@
     <i nz-icon nzType="close"></i>
   </button>
   <div class="co-page-side-drawer-header" *ngIf="coTitle">
-    <div class="co-page-side-drawer-title" [innerHTML]="coTitle">
+    <div class="co-page-side-drawer-title">
       <ng-container *nzStringTemplateOutlet="coTitle">
         <div [innerHTML]="coTitle"></div>
       </ng-container>
