--- a/packages/cbc/layout/page-layout/style/index.less
+++ b/packages/cbc/layout/page-layout/style/index.less
@@ -105,7 +105,6 @@
       height: 100%;
       position: relative;
       overflow: hidden;
-      padding: 12px;
     }
 
     &-header {
@@ -116,7 +115,8 @@
     }
 
     &-body {
-      overflow: hidden;
+      overflow: auto;
+      padding: 12px;
     }
 
     &-title {
