fix(cbc:st): order by

--- a/packages/cbc/web/st/style/index.less
+++ b/packages/cbc/web/st/style/index.less
@@ -88,8 +88,11 @@
   }
 
   &-has-filter {
-    tr& th, .ant-table-column-sorters {
+    tr& th {
       padding: 5px 12px !important;
+    }
+    .ant-table-column-sorters {
+      padding: 0;
     }
   }
 
