fix(cbc:st): virtual x scroll

--- a/packages/cbc/web/st/st.component.html
+++ b/packages/cbc/web/st/st.component.html
@@ -87,6 +87,7 @@
   [nzPaginationPosition]="page.position"
   [nzShowTotal]="totalTpl"
   [nzWidthConfig]="widthConfig"
+  fixScrollingX
   nz-resizable
 >
   <thead class="st__head">
