feat(cbc:st): row class

--- a/packages/cbc/web/st/style/index.less
+++ b/packages/cbc/web/st/style/index.less
@@ -123,6 +123,9 @@
     &@{st-prefix}-row-error {
       background: #FFA39E;
     }
+    &@{st-prefix}-row-error-text {
+      color: #e55354;
+    }
 
     &@{st-prefix}-row-secondary {
       background: #d8dffa;
