--- a/packages/cbc/layout/page-layout/style/index.less
+++ b/packages/cbc/layout/page-layout/style/index.less
@@ -12,6 +12,7 @@
   flex: auto;
   flex-direction: column;
   height: 100%;
+  max-height: 100%;
   min-height: 0;
   background-color: #ffffff;
   padding: @page-layout-padding;
@@ -52,7 +53,6 @@
 }
 
 @{page-main-prefix}, @{page-side-prefix} {
-  flex: auto;
   min-height: 0;
   border-radius: 4px;
   overflow: hidden;
@@ -60,7 +60,13 @@
 
 }
 
+@{page-main-prefix} {
+  flex: 1 1 100%;
+}
+
 @{page-side-prefix} {
+  flex: 1 0 auto;
+  display: flex;
   &-resize-handle {
     user-select: none;
     z-index: 9;
@@ -84,8 +90,6 @@
 
   &-drawer {
     display: none;
-    width: 100%;
-    height: 100%;
     position: relative;
     z-index: 1;
     background-color: #fff;
@@ -117,6 +121,7 @@
     &-body {
       overflow: auto;
       padding: 12px;
+      flex: 1 1 100%;
     }
 
     &-title {
