--- a/src/app/routes/dev/cbc/layout/page-layout-demo/right-side-demo/right-side-demo.component.html
+++ b/src/app/routes/dev/cbc/layout/page-layout-demo/right-side-demo/right-side-demo.component.html
@@ -1,6 +1,6 @@
 <div class="bg-wrapper">
   <co-page-layout>
-    <co-page-main [coMaxWidth]="1200">
+    <co-page-main [coMaxWidth]="'1200px'">
       <co-page-layout>
         <co-toolbar>
           <co-toolbar-item>
@@ -69,7 +69,7 @@
             </nz-button-group>
           </div>
         </co-page-main>
-        <co-page-side>
+        <co-page-side [coMinWidth]="'10px'">
           <div style="display: flex;justify-content: center;align-items: center;background: #8f8f88;height: 100%;width:100%;color: white;">侧栏区域</div>
         </co-page-side>
       </co-page-layout>
