refactor(cbc:st): button type delay

--- a/packages/cbc/web/st/st.component.html
+++ b/packages/cbc/web/st/st.component.html
@@ -37,11 +37,21 @@
     ></i>
     <i *ngIf="btn.icon.iconfont" nz-icon [nzIconfont]="btn.icon.iconfont"></i>
   </ng-container>
-  <span [innerHTML]="_btnText(i, btn)" [ngClass]="{ 'pl-xs': btn.icon }"></span>
-  <nz-spin *ngIf="i._button && i._button[btn.text] && i._button[btn.text].delay" nzSimple [nzIndicator]="btnDelayLoadingTpl" class="st__btn-loading"></nz-spin>
-  <ng-template #btnDelayLoadingTpl><i class="st__delay-icon anticon-spin"></i></ng-template>
-  <nz-spin *ngIf="i._button && i._button[btn.text] && i._button[btn.text].loading" nzSimple [nzIndicator]="btnLoadingTpl" class="st__btn-loading"></nz-spin>
-  <ng-template #btnLoadingTpl><i nz-icon nzType="loading"></i></ng-template>
+  <ng-container [ngSwitch]="true">
+    <ng-template [ngSwitchCase]="!!(i._button && i._button[btn.text] && i._button[btn.text].delay)">
+      {{'Recover' | internalI18n}}
+      <nz-spin *ngIf="i._button && i._button[btn.text] && i._button[btn.text].delay" nzSimple [nzIndicator]="btnDelayLoadingTpl" class="st__btn-loading"></nz-spin>
+      <ng-template #btnDelayLoadingTpl><i class="st__delay-icon anticon-spin"></i></ng-template>
+    </ng-template>
+    <ng-template [ngSwitchCase]="!!(i._button && i._button[btn.text] && i._button[btn.text].loading)">
+      {{'Loading' | internalI18n}}
+      <nz-spin *ngIf="i._button && i._button[btn.text] && i._button[btn.text].loading" nzSimple [nzIndicator]="btnLoadingTpl" class="st__btn-loading"></nz-spin>
+      <ng-template #btnLoadingTpl><i nz-icon nzType="loading"></i></ng-template>
+    </ng-template>
+    <ng-template ngSwitchDefault>
+      <span [innerHTML]="_btnText(i, btn)" [ngClass]="{ 'pl-xs': btn.icon }"></span>
+    </ng-template>
+  </ng-container>
 </ng-template>
 <ng-template #titleTpl let-i>
   <span [innerHTML]="i._text"></span>
