fix(cbc:st): add virtual scroll missing scroll bar

--- a/packages/cbc/web/st/style/index.less
+++ b/packages/cbc/web/st/style/index.less
@@ -230,6 +230,10 @@
     }
   }
 
+  &__cdk-viewport-scroll-y cdk-virtual-scroll-viewport {
+    overflow-y: scroll;
+  }
+
   @media screen and (min-width: @nz-table-rep-min-width) {
     &__width {
       &-strict {
