--- a/packages/cbc/web/st/st.component.html
+++ b/packages/cbc/web/st/st.component.html
@@ -302,7 +302,7 @@
                   <nz-badge *ngSwitchCase="'badge'" [nzStatus]="i._values[cIdx].color" [nzText]="i._values[cIdx].text"></nz-badge>
                 </ng-container>
                 <ng-template *ngSwitchCase="'widget'" st-widget-host [record]="i" [column]="c"></ng-template>
-                <span *ngSwitchDefault [innerHTML]="i._values[cIdx]._text" [attr.title]="isTruncate(c) ? i._values[cIdx].text : null"></span>
+                <span *ngSwitchDefault [innerHTML]="i._values[cIdx]._text" [attr.title]="isTruncate(c) ? htmlToText(i._values[cIdx].text) : null"></span>
               </ng-container>
               <!-- 编辑 -->
               <ng-template #editing>
