fix(cbc:st): dropdown button style

--- a/packages/cbc/web/st/style/index.less
+++ b/packages/cbc/web/st/style/index.less
@@ -34,7 +34,11 @@
 
     &-sub {
       @{st-prefix}__btn-text {
-        color: inherit;
+        color: #1890ff;
+
+        &:hover {
+          color: #40a9ff;
+        }
       }
     }
 
