迁移地图组件

--- a/packages/cbc/index.less
+++ b/packages/cbc/index.less
@@ -1,8 +1,8 @@
 @import './basic/ellipsis/style/index.less';
 @import './basic/notice-icon/style/index.less';
 @import './basic/loading/style/index.less';
-@import './web/se/style/index';
-@import './web/st/style/index';
+@import './web/se/style/index.less';
+@import './web/st/style/index.less';
 
 @import './business/style/index.less';
 @import './layout/style/index.less';
