--- a/src/styles.less
+++ b/src/styles.less
@@ -9,6 +9,7 @@
 @import '../packages/theme/system/index.less';
 @import '../packages/cbc/index.less';
 @import '../packages/cms/index.less';
+@import '../packages/map/index.less';
 @import '../packages/chart/index.less';
 @import '../packages/theme/layout/default/index.less';
 
