--- a/packages/theme/theme-default.less
+++ b/packages/theme/theme-default.less
@@ -1,4 +1,5 @@
 @import '~ng-zorro-antd/src/style/themes/default.less';
+@import "~ng-zorro-antd/resizable/style/entry.less";
 
 @import './system/theme-default.less';
 @import './layout/default/theme-default.less';
