--- a/packages/cbc/web/st/style/index.less
+++ b/packages/cbc/web/st/style/index.less
@@ -141,6 +141,17 @@
         background: rgba(230, 247, 255, 1);
       }
     }
+    &@{st-prefix}-row-child-expanded {
+      &:hover td {
+        background: #CFDDEE !important;
+      }
+      td {
+        padding-top: 8px;
+        padding-bottom: 8px;
+        background: #CFDDEE !important;
+        border-color: #dee8f5;
+      }
+    }
 
     &@{st-prefix}-row-line-through td:not(.no-line-through) {
       color: rgba(0, 0, 0, 0.25);
