--- a/packages/cbc/web/st/st.component.html
+++ b/packages/cbc/web/st/st.component.html
@@ -103,7 +103,7 @@
 >
   <thead class="st__head">
     <tr *ngFor="let row of _headers; let rowFirst = first"  [class.st-has-filter]="showFilters">
-      <th *ngIf="rowFirst && showCheckbox" nzWidth="50px" [attr.rowspan]="_headers.length" [nzLeft]="true">
+      <th *ngIf="rowFirst && showCheckbox" [nzWidth]="size === 'small' ? '38px' : '50px'" [attr.rowspan]="_headers.length" [nzLeft]="true">
         <ng-container *ngIf="checkboxSelections.length === 0">
           <ng-template [ngTemplateOutlet]="chkAllTpl" [ngTemplateOutletContext]="{ $implicit: false }"> </ng-template>
         </ng-container>
@@ -125,7 +125,7 @@
           </nz-dropdown-menu>
         </div>
       </th>
-      <th *ngIf="rowFirst && expand" nzWidth="50px" [attr.rowspan]="_headers.length" [nzLeft]="true"></th>
+      <th *ngIf="rowFirst && expand" [nzWidth]="size === 'small' ? '38px' : '50px'" [attr.rowspan]="_headers.length" [nzLeft]="true"></th>
       <ng-container *ngFor="let h of getEnabledColumns(row, 'column', 'header'); let index = index">
         <th
           *ngIf="h?.column?.type !== 'action'; else notResizable"
@@ -201,8 +201,8 @@
     </tr>
     <tr class="st-thead-row-filter st-has-filter"
         *ngIf="showFilters && getEnabledColumns(_filterRow, 'column', 'filter')?.length">
-      <th *ngIf="showCheckbox" nzWidth="50px" [nzLeft]="true"></th>
-      <th *ngIf="expand" nzWidth="50px" [nzLeft]="true"></th>
+      <th *ngIf="showCheckbox" [nzLeft]="true"></th>
+      <th *ngIf="expand" [nzLeft]="true"></th>
       <th *ngFor="let i of getEnabledColumns(_filterRow, 'column', 'filter'); index as index"
           [nzLeft]="!!i.column._left"
           [nzRight]="!!i.column._right"
@@ -278,7 +278,8 @@
       >
         <td
           *ngIf="showCheckbox"
-          [nzLeft]="true">
+          [nzLeft]="true"
+          class="text-center">
           <label *ngIf="!i._innerExpandRow" nz-checkbox [nzDisabled]="i.disabled" [ngModel]="i.checked" (ngModelChange)="_checkSelection(i, $event, index)"></label>
         </td>
         <td
@@ -295,7 +296,7 @@
           <span *ngIf="responsive" class="ant-table-rep__title">
             <ng-template [ngTemplateOutlet]="titleTpl" [ngTemplateOutletContext]="{ $implicit: c.title }"></ng-template>
           </span>
-          <span>
+          <span data-cell-span>
             <ng-template #render [ngTemplateOutlet]="c.__render" [ngTemplateOutletContext]="{ $implicit: i, index: index, column: c }"></ng-template>
             <ng-container *ngIf="!c.__render; else render">
               <!-- 常规展示 -->
