--- a/packages/cbc/web/st/style/index.less
+++ b/packages/cbc/web/st/style/index.less
@@ -260,4 +260,13 @@
       }
     }
   }
+
+  .ant-table-small .ant-table-tbody > tr > td {
+    padding: 1px 4px;
+    font-size: 12px;
+
+    &.ant-table-cell-fix-right {
+      padding-left: 10px;
+    }
+  }
 }
