--- a/packages/cbc/web/st/style/index.less
+++ b/packages/cbc/web/st/style/index.less
@@ -261,12 +261,26 @@
     }
   }
 
-  .ant-table-small .ant-table-tbody > tr > td {
-    padding: 1px 4px;
-    font-size: 12px;
+  .ant-table-small {
+    .ant-table-tbody > tr > td {
+      padding: 1px 4px;
+      font-size: 12px;
 
-    &.ant-table-cell-fix-right {
-      padding-left: 10px;
+      &.ant-table-cell-fix-right {
+        padding-left: 10px;
+      }
+    }
+
+    .ant-table-thead {
+      .ant-table-column-sorters {
+        padding: 0;
+      }
+
+      tr {
+        th {
+          padding: 3px 5px !important;
+        }
+      }
     }
   }
 }
